Switch to a new template

--- a/index.html
+++ b/index.html
@@ -1,3 +1,122 @@
----
-layout: home
----
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Anton Petrov, RNA Bioinformatician</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<header id="header" style="background: url(images/animate.svg) no-repeat, url(images/bg.jpg) repeat; background-size: auto auto;">
+				<div class="inner" style="background-color: rgba(0, 0, 0, 0.5); text-align:center; padding-top: 10px;">
+					<a href="#" class="image avatar"><img src="images/petrov_anton_500_500.jpg" alt="Anton Petrov" /></a>
+					<h1><strong>Anton Petrov</strong>, PhD<br />
+					Open to opportunities<br /> in RNA Bioinformatics<br />.</h1>
+          <a href="http://bit.ly/anton-petrov-cv-pdf" class="button"><strong>Download CV</strong></a>
+				</div>
+			</header>
+
+		<!-- Main -->
+			<div id="main">
+
+				<!-- One -->
+        <section id="one">
+          <section>
+						<h2>Hello 👋</h2>
+
+            <p>
+              I am a bioinformatician specialising in non-coding RNA. I worked at <a href="https://www.ebi.ac.uk/">EMBL-EBI</a> where I established <a href="https://rnacentral.org">RNAcentral</a> and  led a team responsible for the development of <a href="https://rfam.org">Rfam</a>. During my PhD in the <a href="https://rna.bgsu.edu">Leontis-Zirbel lab</a> I developed <a href="https://rna.bgsu.edu/rna3dhub/motifs">RNA 3D Motif Atlas</a>, an automatic classification of RNA 3D motifs, and contributed to several databases and web apps for RNA 3D structure analysis, including <a href="http://rna.bgsu.edu/rna3dhub/">RNA 3D Hub</a>, <a href="http://rna.bgsu.edu/webfr3d">WebFR3D</a>, <a href="http://rna.bgsu.edu/jar3d">JAR3D</a>, and <a href="http://rna.bgsu.edu/r3dalign/">R3D Align</a>.
+            </p>
+
+            <p>
+              Most recently I created <a href="">R2DT</a>, the first method for automatic visualisation of RNA secondary structure in standard, community-accepted layouts, and applied my skills to developing drugs targeting RNA at <a href="https://laddertx.com">Ladder Therapeutics</a>.
+            </p>
+
+            <h4>
+              <strong>I am open to work opportunities and collaborations, so feel free to <a href="mailto:contact@antonpetrov.com">reach out</a>!</strong>
+            </h4>
+        </section.
+
+					<section id="two">
+						<h2>My Projects 🛠️</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item grow">
+								<a href="https://github.com/rnacentral/r2dt" class="image fit thumb">
+                  <img src="images/r2dt.png" alt="" />
+                </a>
+								<h3><a href="https://github.com/rnacentral/r2dt">R2DT</a></h3>
+								<p>R2DT predicts and visualises RNA secondary structure in consistent, reproducible, and recogniseable layouts</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item grow">
+								<a href="https://rnacentral.org/static/img/expert-databases.png" class="image fit thumb"><img src="https://rnacentral.org/static/img/expert-databases.png" alt="" /></a>
+								<h3><a href="https://rnacentral.org">RNAcentral</a></h3>
+								<p>RNAcentral is the world's largest non-coding RNA sequence database</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item grow">
+								<a href="https://rfam.org" class="image fit thumb"><img src="images/rfam.png" alt="" /></a>
+								<h3><a href="https://rfam.org">Rfam</a></h3>
+								<p>Rfam is the RNA families database that contains over 4,000 RNAs and is widely used for genome annotation, benchmarking, and algorithm development</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item grow">
+								<a href="http://rna.bgsu.edu/rna3dhub" class="image fit thumb"><img src="images/rna3dhub.png" alt="" /></a>
+								<h3><a href="http://rna.bgsu.edu/rna3dhub">RNA 3D Hub</a></h3>
+								<p>RNA 3D Hub provides annotations of RNA 3D structures, such as RNA 3D motifs, basepair interactions, and non-redundant sets of structures</p>
+							</article>
+						<!-- <ul class="actions">
+							<li><a href="http://bit.ly/anton-petrov-cv-pdf" class="button">My CV</a></li>
+						</ul> -->
+					</section>
+
+          <!-- Three -->
+          <!-- <section id="three">
+            <section>
+              <a class="twitter-timeline" data-width="500" data-height="1000" href="https://twitter.com/AntonIPetrov?ref_src=twsrc%5Etfw">Latest Tweets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <section>
+          </section> -->
+
+          <!-- Four -->
+          <section id="four">
+              <section>
+                <h2>Stay in touch ✉️</h2>
+                <ul>
+                  <li>Follow on <a href="https://twitter.com/AntonIPetrov">Twitter</a></li>
+                  <li>Connect on <a href="https://www.linkedin.com/in/aipetrov/">LinkedIn</a></li>
+                  <li>Be the first to hear about new papers on <a href="https://scholar.google.com/citations?user=PDdl6OcAAAAJ&hl=en">Google Scholar</a></li>
+                </ul>
+              <section>
+          </section>
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner" style="text-align: center;">
+					<ul class="icons">
+						<li><a href="https://twitter.com/antonipetrov" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/aipetrov/" class="icon brands fa-linkedin"><span class="label">Github</span></a></li>
+            <li><a href="https://github.com/antonpetrov" class="icon brands fa-github"><span class="label">Github</span></a></li>
+            <li>
+              <a href="https://orcid.org/0000-0001-7279-2682" class="icon">
+                <svg width="20" height="20" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 256 256" style="opacity:50%; enable-background:new 0 0 256 256;" xml:space="preserve"> <style type="text/css"> .st0{fill:#A6CE39;} .st1{fill:#FFFFFF;} </style> <path class="st0" d="M256,128c0,70.7-57.3,128-128,128C57.3,256,0,198.7,0,128C0,57.3,57.3,0,128,0C198.7,0,256,57.3,256,128z"></path> <g> <path class="st1" d="M86.3,186.2H70.9V79.1h15.4v48.4V186.2z"></path> <path class="st1" d="M108.9,79.1h41.6c39.6,0,57,28.3,57,53.6c0,27.5-21.5,53.6-56.8,53.6h-41.8V79.1z M124.3,172.4h24.5 c34.9,0,42.9-26.5,42.9-39.7c0-21.5-13.7-39.7-43.7-39.7h-23.7V172.4z"></path> <path class="st1" d="M88.7,56.8c0,5.5-4.5,10.1-10.1,10.1c-5.6,0-10.1-4.6-10.1-10.1c0-5.6,4.5-10.1,10.1-10.1 C84.2,46.7,88.7,51.3,88.7,56.8z"></path> </g> </svg>
+                <span class="label">ORCID</span></a>
+            </li>
+            <li><a href="https://publons.com/researcher/391112/anton-petrov/" class="icon">
+              <img style="width:20px; height:20px; opacity: 50%;" src="images/publons.png">
+              <span class="label">Publons</span></a>
+            </li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+	</body>
+</html>
