Change BGSU URLs to http

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<h2>Hello 👋</h2>
 
             <p>
-              I am a bioinformatician specialising in non-coding RNA. I worked at <a href="https://www.ebi.ac.uk/">EMBL-EBI</a> where I established <a href="https://rnacentral.org">RNAcentral</a> and  led a team responsible for the development of <a href="https://rfam.org">Rfam</a>. During my PhD in the <a href="https://rna.bgsu.edu">Leontis-Zirbel lab</a> I developed <a href="https://rna.bgsu.edu/rna3dhub/motifs">RNA 3D Motif Atlas</a>, an automatic classification of RNA 3D motifs, and contributed to several databases and web apps for RNA 3D structure analysis, including <a href="http://rna.bgsu.edu/rna3dhub/">RNA 3D Hub</a>, <a href="http://rna.bgsu.edu/webfr3d">WebFR3D</a>, <a href="http://rna.bgsu.edu/jar3d">JAR3D</a>, and <a href="http://rna.bgsu.edu/r3dalign/">R3D Align</a>.
+              I am a bioinformatician specialising in non-coding RNA. I worked at <a href="https://www.ebi.ac.uk/">EMBL-EBI</a> where I established <a href="https://rnacentral.org">RNAcentral</a> and  led a team responsible for the development of <a href="https://rfam.org">Rfam</a>. During my PhD in the <a href="http://rna.bgsu.edu">Leontis-Zirbel lab</a> I developed <a href="http://rna.bgsu.edu/rna3dhub/motifs">RNA 3D Motif Atlas</a>, an automatic classification of RNA 3D motifs, and contributed to several databases and web apps for RNA 3D structure analysis, including <a href="http://rna.bgsu.edu/rna3dhub/">RNA 3D Hub</a>, <a href="http://rna.bgsu.edu/webfr3d">WebFR3D</a>, <a href="http://rna.bgsu.edu/jar3d">JAR3D</a>, and <a href="http://rna.bgsu.edu/r3dalign/">R3D Align</a>.
             </p>
 
             <p>
