Add links to Riboscope

--- a/consulting.html
+++ b/consulting.html
@@ -31,8 +31,9 @@
 			<h2>Consulting</h2>
 
 			<p>
-				With over 14 years of experience in RNA bioinformatics, I can provide advice, training, and hands-on
-				support with a broad range of projects.
+				In 2022 I started an RNA bioinformatics consulting company, <a href="https://riboscope.com">Riboscope Ltd</a>,
+				that provides scientific input, training, and hands-on support with a broad range of projects
+				in Computational RNA Biology.
 			</p>
 
 			<ul>
@@ -46,9 +47,9 @@
 			</ul>
 
 			<p>
-				I am also happy to assist with projects involving RNA <strong>target selection</strong> and
-				prioritisation, ncRNA <strong>genome
-					annotation</strong>, predicting and visualising
+				Building on 14 years of experience in RNA bioinformatics, I am also happy to assist with projects
+				involving RNA <strong>target selection</strong> and
+				prioritisation, ncRNA <strong>genome annotation</strong>, predicting and visualising
 				RNA <strong>secondary structure</strong>, or assessing the quality of <strong>RNA 3D structure</strong>
 				predictions.
 			</p>
