--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</p>
 
 			<p>
-				Most recently I created <a href="">R2DT</a>, the first method for automatic visualisation of RNA
+				Most recently I created <a href="https://rnacentral.org/r2dt">R2DT</a>, the first method for automatic visualisation of RNA
 				secondary structure in standard, community-accepted layouts, and applied my skills to developing
 				drugs targeting RNA at <a href="https://laddertx.com">Ladder Therapeutics</a>.
 			</p>
@@ -53,7 +53,8 @@
 				After reaching <a href="https://twitter.com/ewanbirney/status/1037379609669656584?lang=en-GB">9
 					years</a> at EMBL-EBI, I am looking for my next RNA adventure. I am open to work
 				opportunities and collaborations, and I am happy to provide <strong><a
-						href="./consulting.html">consulting services</a></strong>.
+						href="./consulting.html">consulting services</a></strong> via my new company, <a
+					href="https://riboscope.org">Riboscope Ltd</a>.
 				<br>
 				<a style="margin-top: 20px;" mailto="contact@antonpetrov.com" class="button primary">Get in touch
 					&rarr;</a>
