Update publons link

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						</svg>
 						<span class="label">ORCID</span></a>
 				</li>
-				<li><a href="https://publons.com/researcher/391112/anton-petrov/" class="icon">
+				<li><a href="https://www.webofscience.com/wos/author/record/779" class="icon">
 						<img style="width:20px; height:20px; opacity: 50%;" src="images/publons.png">
 						<span class="label">Publons</span></a>
 				</li>
