--- a/index.html
+++ b/index.html
@@ -30,34 +30,22 @@
 			<h2>Hello 👋</h2>
 
 			<p>
-				I am a bioinformatician specialising in non-coding RNA. I worked at the European Bioinformatics
-				Institute (<a href="https://www.ebi.ac.uk/">EMBL-EBI</a>) where I established <a
-					href="https://rnacentral.org">RNAcentral</a> and led a team responsible for the development of
-				<a href="https://rfam.org">Rfam</a>. During my PhD in the <a href="http://rna.bgsu.edu">Leontis-Zirbel
-					lab</a> I developed <a href="http://rna.bgsu.edu/rna3dhub/motifs">RNA 3D Motif Atlas</a>, an
-				automatic classification
-				of RNA 3D motifs, and contributed to several databases and web apps for RNA 3D structure analysis,
-				including <a href="http://rna.bgsu.edu/rna3dhub/">RNA 3D Hub</a>, <a
-					href="http://rna.bgsu.edu/webfr3d">WebFR3D</a>, <a href="http://rna.bgsu.edu/jar3d">JAR3D</a>,
-				and <a href="http://rna.bgsu.edu/r3dalign/">R3D Align</a>.
+				I am a bioinformatician with over 15 years of experience analysing non-coding RNA. During my PhD in the <a href="http://rna.bgsu.edu">Leontis-Zirbel lab</a> at BGSU I developed <a href="http://rna.bgsu.edu/rna3dhub/motifs">RNA 3D Motif Atlas</a>, an automatic classification of RNA 3D motifs, and contributed to several databases and web apps for RNA 3D structure analysis, including <a href="http://rna.bgsu.edu/rna3dhub/">RNA 3D Hub</a>, <a href="http://rna.bgsu.edu/webfr3d">WebFR3D</a>, <a href="http://rna.bgsu.edu/jar3d">JAR3D</a>, and <a href="http://rna.bgsu.edu/r3dalign/">R3D Align</a>.
 			</p>
 
 			<p>
-				Most recently I created <a href="https://rnacentral.org/r2dt">R2DT</a>, the first method for automatic visualisation of RNA
-				secondary structure in standard, community-accepted layouts, and applied my skills to developing
-				drugs targeting RNA at <a href="https://laddertx.com">Ladder Therapeutics</a>.
+				After my PhD, I worked at the European Bioinformatics Institute (<a href="https://www.ebi.ac.uk/">EMBL-EBI</a>) as Bioinformatician and Project Leader. I established <a href="https://rnacentral.org">RNAcentral</a> and led a team responsible for the development of <a href="https://rfam.org">Rfam</a>. I also created <a href="https://rnacentral.org/r2dt">R2DT</a>, the first method for automatic visualisation of RNA secondary structure in standard, community-accepted layouts.
+			</p>
+
+			<p>
+				After 9 years at EBI I worked on developing drugs targeting RNA at Ladder Therapeutics (now <a href="https://serna.bio">Serna Bio</a>). Currently I provide consulting services in the area of RNA bioinformatics via my company, <a href="https://riboscope.org">Riboscope Ltd</a>.
 			</p>
 
 			<h3>Open to work 👨‍💻</h3>
 			<p>
-				After reaching <a href="https://twitter.com/ewanbirney/status/1037379609669656584?lang=en-GB">9
-					years</a> at EMBL-EBI, I am looking for my next RNA adventure. I am open to work
-				opportunities and collaborations, and I am happy to provide <strong><a
-						href="./consulting.html">consulting services</a></strong> via my new company, <a
-					href="https://riboscope.org">Riboscope Ltd</a>.
-				<br>
-				<a style="margin-top: 20px;" mailto="contact@antonpetrov.com" class="button primary">Get in touch
-					&rarr;</a>
+				I am open to work opportunities and collaborations, and I am happy to provide <strong><a href="./consulting.html">consulting services</a></strong> via my company.
+				<br/>
+				<a style="margin-top: 20px;" mailto="contact@antonpetrov.com" class="button primary">Get in touch &rarr;</a>
 			</p>
 		</section>
 
@@ -102,9 +90,7 @@
 				<ul>
 					<li>Follow me on <a href="https://twitter.com/AntonIPetrov">Twitter</a></li>
 					<li>Connect on <a href="https://www.linkedin.com/in/aipetrov/">LinkedIn</a></li>
-					<li>Be the first to hear about my new papers on <a
-							href="https://scholar.google.com/citations?user=PDdl6OcAAAAJ&hl=en">Google
-							Scholar</a></li>
+					<li>Sign up for updates on <a href="https://scholar.google.com/citations?user=PDdl6OcAAAAJ&hl=en">Google Scholar</a></li>
 					<li>Reach out by <a mailto="contact@antonpetrov.com">email</a></li>
 				</ul>
 			</section>
