--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					alt="Anton Petrov" /></a>
 			<h1><strong>Anton Petrov, PhD<br />
 					Open to opportunities<br /> in RNA Bioinformatics</strong></h1>
-			<a href="http://bit.ly/anton-petrov-cv-pdf" class="button"><strong>Download CV</strong></a>
+			<a href="https://bit.ly/anton-petrov-cv-pdf" class="button"><strong>Download CV</strong></a>
 		</div>
 	</header>
 
