Fix contact button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<p>
 				I am open to work opportunities and collaborations, and I am happy to provide <strong><a href="./consulting.html">consulting services</a></strong> via my company.
 				<br/>
-				<a style="margin-top: 20px;" mailto="contact@antonpetrov.com" class="button primary">Get in touch &rarr;</a>
+				<a style="margin-top: 20px;" href="mailto:contact@antonpetrov.com" class="button primary">Get in touch &rarr;</a>
 			</p>
 		</section>
 
