--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</p>
 
 			<p>
-				After my PhD, I worked at the European Bioinformatics Institute (<a href="https://www.ebi.ac.uk/">EMBL-EBI</a>) as Bioinformatician and Project Leader. I established <a href="https://rnacentral.org">RNAcentral</a> and led a team responsible for the development of <a href="https://rfam.org">Rfam</a>. I also created <a href="https://rnacentral.org/r2dt">R2DT</a>, the first method for automatic visualisation of RNA secondary structure in standard, community-accepted layouts.
+				After my PhD, I worked at the European Bioinformatics Institute (<a href="https://www.ebi.ac.uk/">EMBL-EBI</a>) as Bioinformatician and Project Leader. I established <a href="https://rnacentral.org">RNAcentral</a> and led a team responsible for the development of <a href="https://rfam.org">Rfam</a>. I also created <a href="https://r2dt.bio">R2DT</a>, the first method for automatic visualisation of RNA secondary structure in standard, community-accepted layouts.
 			</p>
 
 			<p>
@@ -54,10 +54,10 @@
 				<h2>My Projects 🛠️</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall work-item grow">
-						<a href="https://github.com/rnacentral/r2dt" class="image fit thumb">
+						<a href="https://r2dt.bio" class="image fit thumb">
 							<img src="images/r2dt.png" alt="" />
 						</a>
-						<h3><a href="https://github.com/rnacentral/r2dt">R2DT</a></h3>
+						<h3><a href="https://r2dt.bio">R2DT</a></h3>
 						<p>R2DT predicts and visualises RNA secondary structure in consistent, reproducible, and
 							recogniseable layouts</p>
 					</article>
@@ -88,7 +88,7 @@
 			<section>
 				<h2>Stay in touch ✉️</h2>
 				<ul>
-					<li>Follow me on <a href="https://twitter.com/AntonIPetrov">Twitter</a></li>
+					<li>Follow me on <a href="https://twitter.com/AntonIPetrov"><del>Twitter</del> X</a></li>
 					<li>Connect on <a href="https://www.linkedin.com/in/aipetrov/">LinkedIn</a></li>
 					<li>Sign up for updates on <a href="https://scholar.google.com/citations?user=PDdl6OcAAAAJ&hl=en">Google Scholar</a></li>
 					<li>Reach out by <a mailto="contact@antonpetrov.com">email</a></li>
@@ -139,7 +139,7 @@
 				</li>
 				<li><a href="https://www.webofscience.com/wos/author/record/779" class="icon">
 						<img style="width:20px; height:20px; opacity: 50%;" src="images/publons.png">
-						<span class="label">Publons</span></a>
+						<span class="label">Web of Science</span></a>
 				</li>
 			</ul>
 		</div>
