--- a/consulting.html
+++ b/consulting.html
@@ -43,7 +43,7 @@
 				<li>Do you need help creating an RNA-related <strong>database</strong> or a
 					<strong>website</strong>?
 				</li>
-				<li>Are you interested in learning to use <a href="https://r2dt.bio">R2DT</a> or <a href="http://eddylab.org/infernal/">Infernal</a>?</li>
+				<li>Are you interested in custom RNA data visualisations using <a href="https://r2dt.bio">R2DT</a>?</li>
 			</ul>
 
 			<p>
