--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<!-- Header -->
 	<header id="header"
 		style="background: url(images/animate.svg) no-repeat, url(images/bg.jpg) repeat; background-size: auto auto;">
-		<div class="inner" style="background-color: rgba(0, 0, 0, 0.5); text-align:center; padding-top: 10px;">
-			<a href="./index.html" class="image avatar"><img src="images/petrov_anton_500_500.jpg"
-					alt="Anton Petrov" /></a>
-			<h1><strong>Anton Petrov, PhD<br />
-					Open to opportunities<br /> in RNA Bioinformatics</strong></h1>
+		<div class="inner" style="background-color: rgba(0, 0, 0, 0.5); text-align:center; padding-top: 20px;">
+			<a href="./index.html" class="image avatar"><img src="images/anton-petrov.png" alt="Anton Petrov" />
+			</a>
+			<h1><strong>Anton Petrov, PhD</strong></h1>
+			<h4>RNA Bionformatician <br> Director, <a href="https://riboscope.com">Riboscope Ltd</a></h4>
 			<a href="https://bit.ly/anton-petrov-cv-pdf" class="button"><strong>Download CV</strong></a>
 		</div>
 	</header>
