--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			<section>
 				<h2>Stay in touch ✉️</h2>
 				<ul>
-					<li>Follow me on <a href="https://twitter.com/AntonIPetrov"><del>Twitter</del> X</a></li>
+					<li>Follow on <a href="https://bsky.app/profile/antonipetrov.bsky.social">Bluesky</a> or <a href="https://x.com/AntonIPetrov">Twitter</a></li>
 					<li>Connect on <a href="https://www.linkedin.com/in/aipetrov/">LinkedIn</a></li>
 					<li>Sign up for updates on <a href="https://scholar.google.com/citations?user=PDdl6OcAAAAJ&hl=en">Google Scholar</a></li>
 					<li>Reach out by <a mailto="contact@antonpetrov.com">email</a></li>
