--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<!-- Header -->
 	<header id="header"
 		style="background: url(images/animate.svg) no-repeat, url(images/bg.jpg) repeat; background-size: auto auto;">
-		<div class="inner" style="background-color: rgba(0, 0, 0, 0.5); text-align:center; padding-top: 20px;">
+		<div class="inner" style="background-color: rgba(0, 0, 0, 0.5); text-align:center; padding-top: 20px; padding-bottom: 20px;">
 			<a href="./index.html" class="image avatar"><img src="images/anton-petrov.png" alt="Anton Petrov" />
 			</a>
 			<h1><strong>Anton Petrov, PhD</strong></h1>
