Switch to riboscope email

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<p>
 				I am open to new opportunities and collaborations, and I am happy to offer <strong><a href="./consulting.html">consulting services</a></strong> through Riboscope Ltd.
 				<br/>
-				<a style="margin-top: 20px;" href="mailto:contact@antonpetrov.com" class="button primary">Get in touch &rarr;</a>
+				<a style="margin-top: 20px;" href="mailto:apetrov@riboscope.com" class="button primary">Get in touch &rarr;</a>
 			</p>
 		</section>
 
