Fix Riboscope Ltd link in index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			</p>
 
 			<p>
-				After nine years at EBI, I moved to RNA therapeutics and worked at Ladder Tx (now <a href="https://serna.bio">Serna Bio</a>). Today, I provide RNA bioinformatics consulting through my company, <a href="https://riboscope.org">Riboscope Ltd</a>.
+				After nine years at EBI, I moved to RNA therapeutics and worked at Ladder Tx (now <a href="https://serna.bio">Serna Bio</a>). Today, I provide RNA bioinformatics consulting through my company, <a href="https://riboscope.com">Riboscope Ltd</a>.
 			</p>
 
 			<h3>Open to Work</h3>
