Update avatar image source in consulting.html

--- a/consulting.html
+++ b/consulting.html
@@ -15,7 +15,7 @@
 	<header id="header"
 		style="background: url(images/animate.svg) no-repeat, url(images/bg.jpg) repeat; background-size: auto auto;">
 		<div class="inner" style="background-color: rgba(0, 0, 0, 0.5); text-align:center; padding-top: 10px;">
-			<a href="./index.html" class="image avatar"><img src="images/petrov_anton_500_500.jpg"
+			<a href="./index.html" class="image avatar"><img src="images/anton-petrov.png"
 					alt="Anton Petrov" /></a>
 			<h1><strong>Anton Petrov, PhD<br />
 					Open to opportunities<br /> in RNA Bioinformatics</strong></h1>
