Fix mailto link and add newline at end of file

--- a/consulting.html
+++ b/consulting.html
@@ -54,7 +54,7 @@
 				predictions.
 			</p>
 
-			<a style="margin-top: 20px;" mailto="contact@antonpetrov.com" class="button primary">Get in touch &rarr;</a>
+			<a style="margin-top: 20px;" href="mailto:contact@antonpetrov.com" class="button primary">Get in touch &rarr;</a>
 		</section>
 	</div>
 
@@ -113,5 +113,4 @@
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
-
 </html>
